Profil kep csere

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- Hero -->
   <section id="hero" class="pt-20 min-h-screen flex items-center bg-white dark:bg-gray-900 transition-colors duration-300">
     <div class="container mx-auto text-center">
-      <img src="profilkep.JPG" alt="Urbán Gergely" class="mx-auto rounded-full w-32 h-32 mb-6 border-4 border-cyan-600 dark:border-cyan-400 transition-colors duration-300">
+      <img src="profilkepv2.JPG" alt="Urbán Gergely" class="mx-auto rounded-full w-32 h-32 mb-6 border-4 border-cyan-600 dark:border-cyan-400 transition-colors duration-300">
       <h1 class="text-4xl md:text-6xl font-bold mb-4">Urbán Gergely</h1>
       <p class="text-xl mb-6">Webfejlesztő és az IttasHallgato-Algoritmus építője</p>
       <div class="space-x-4">
@@ -178,7 +178,14 @@
           </svg>
           LinkedIn profilom
         </a>
+        <a href="https://www.linkedin.com/in/gergely-urb%C3%A1n-ab8676353/" target="_blank" class="inline-flex items-center text-cyan-600 dark:text-cyan-400 hover:text-cyan-700 dark:hover:text-cyan-300 transition-colors duration-300">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+          </svg>
+          GitHub profilom
+        </a>
       </div>
+
       <form action="mailto:ugergo0928@gmail.com" method="POST" class="space-y-4 text-left">
         <input type="text" name="name" placeholder="Neved" required class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-cyan-300 bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 text-gray-800 dark:text-gray-200 transition-colors duration-300">
         <input type="email" name="email" placeholder="Email címed" required class="w-full px-4 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-cyan-300 bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 text-gray-800 dark:text-gray-200 transition-colors duration-300">
