--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container mx-auto max-w-2xl text-center">
       <h2 class="text-3xl font-semibold mb-4 text-gray-900 dark:text-gray-100 transition-colors duration-300">Rólam</h2>
       <p class="mb-4 text-gray-800 dark:text-gray-200 transition-colors duration-300">Eredményorientált, folyamatosan fejlődni vágyó szakember vagyok, aki szívesen dolgozik csapatban és önállóan egyaránt. Szeretem a strukturált munkavégzést, és fontos számomra, hogy a feladataimat pontosan és megbízhatóan lássam el. Nyitott vagyok az új technológiák, módszerek megismerésére, és törekszem arra, hogy a munkám során valódi értéket teremtsek.</p>
-      <a href="Önéletrajzv2.pdf" class="mt-6 inline-block px-6 py-2 bg-cyan-600 dark:bg-cyan-500 text-white rounded hover:bg-cyan-700 dark:hover:bg-cyan-600 transition-colors duration-300">CV letöltése</a>
+      <a href="önéletrajz4.pdf" class="mt-6 inline-block px-6 py-2 bg-cyan-600 dark:bg-cyan-500 text-white rounded hover:bg-cyan-700 dark:hover:bg-cyan-600 transition-colors duration-300">CV letöltése</a>
     </div>
   </section>
 
