Tanfolyamok hozzá adása

--- a/index.html
+++ b/index.html
@@ -167,6 +167,24 @@
     </div>
   </section>
 
+  <!-- Courses -->
+  <section id="courses" class="py-20 bg-white dark:bg-gray-900 transition-colors duration-300">
+    <div class="container mx-auto max-w-2xl text-center">
+      <h2 class="text-3xl font-semibold mb-8 text-gray-900 dark:text-gray-100 transition-colors duration-300">Tanfolyamok</h2>
+      <ul class="list-disc list-inside text-left space-y-4 text-gray-800 dark:text-gray-200 transition-colors duration-300">
+        <li><a target="_blank" class="inline-flex items-center text-cyan-600 dark:text-cyan-400 hover:text-cyan-700 dark:hover:text-cyan-300 transition-colors duration-300" href="https://www.credly.com/badges/e52254dc-1a90-4f6c-a31a-dbba3fffc146/public_url">Cisco networking</a></li>
+        <li>Széchényi István
+          Egyetem:
+          Érdekképviseleti
+          kompetenciafejlesztő
+          képzés
+          Kommunikációs
+          kompetenciák
+        </li>
+      </ul>
+    </div>
+
+  </section>
   <!-- Contact -->
   <section id="contact" class="py-20 bg-white dark:bg-gray-900 transition-colors duration-300">
     <div class="container mx-auto max-w-md text-center">
