--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container mx-auto text-center">
       <img src="profilkepv2.JPG" alt="Urbán Gergely" class="mx-auto rounded-full w-32 h-32 mb-6 border-4 border-cyan-600 dark:border-cyan-400 transition-colors duration-300">
       <h1 class="text-4xl md:text-6xl font-bold mb-4">Urbán Gergely</h1>
-      <p class="text-xl mb-6">Webfejlesztő és az IttasHallgato-Algoritmus építője</p>
+      <p class="text-xl mb-6">Mérnökinformatikus Hallgató és az IttasHallgato-Algoritmus építője</p>
       <div class="space-x-4">
         <a href="#about" class="px-6 py-2 bg-cyan-600 dark:bg-cyan-500 text-white rounded hover:bg-cyan-700 dark:hover:bg-cyan-600 transition-colors duration-300">Rólam</a>
         <a href="#projects" class="px-6 py-2 border border-cyan-600 dark:border-cyan-500 text-cyan-600 dark:text-cyan-400 rounded hover:bg-cyan-50 dark:hover:bg-gray-700 transition-colors duration-300">Projektek</a>
@@ -271,4 +271,5 @@
     });
   </script>
 </body>
+
 </html>
